samples/_failures_safe/1761221451_7fc7cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e45ac361.c: In function ‘main’:
./samples/SAFE/__tmp_e45ac361.c:174:25: error: missing terminating " character
  174 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_e45ac361.c:174:9: error: expected expression at end of input
  174 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_e45ac361.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e45ac361.c:174:9: error: expected declaration or statement at end of input
